[project]
name = "vuer-envs-astribot"
version = "0.1.0"
description = "Autonomous teleoperation bridge for Astribot robot with Vision Pro integration"
readme = "README.md"
authors = [
    {name = "FortyFive Labs Team"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "poethepoet>=0.24.0",
]

[project.scripts]
teleoperation = "vuer_envs_astribot.teleoperation:main"
autonomous-teleoperation = "vuer_envs_astribot.autonomous_teleoperation:main"
robot-executor = "vuer_envs_astribot.robot_executor_node:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "poethepoet>=0.24.0",
]

[tool.poe.tasks]
docs = "mkdocs build"
preview = { shell = "mkdocs build --clean && mkdocs serve" }

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
